# Flask-QR-Code-Web-APP

./: .env_example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: test_runner.yml
src/: __init__.py  config.py  exceptions.py
src/controllers/: __init__.py  user.py
src/core/: __init__.py  enum.py  enums.py  qr_decoder.py  qr_generator.py
src/dao/: __init__.py  user.py
src/migrations/: 2afab8f78605_create_users_table.py  9cfb0ef33038_init_database.py
src/models/: __init__.py  user.py
src/models/entities/: __all_models__.py  __init__.py  user.py
src/models/forms/: sign_in.py  sign_up.py
src/routes/: __init__.py  auth.py  main.py
src/routes/dependencies/: __init__.py  general.py  session.py
src/static/css/: form.css  global.css
src/static/css/auth/: login.css  register.css
src/static/css/index/: style.css
src/static/css/main/: decode.css  index.css
src/static/js/main/: index.js
src/templates/: base.html  header.html  index.html
src/templates/auth/: signIn.html  signUp.html
src/templates/main/: decode.html  index.html
src/utils/: __init__.py  hex_to_rgb.py
src/utils/enum/: __init__.py  flash_message_category.py
src/utils/security/: __init__.py  password_util.py
tests/: __init__.py  conftest.py  test_auth_router.py  test_hex_to_rgb.py  test_main_router.py
