[tool.poetry]
name = "flask-qr-code-web-app"
version = "0.1.0"
description = "A flask web app for generating and decoding qr codes"
authors = ["Owusu Kelvin Clark <kelvinclark2k77@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
qrcode = {extras = ["pil"], version = "^7.3.1"}
Flask-SQLAlchemy = "^2.5.1"
Flask-Alembic = "^2.0.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
