[tool.poetry]
name = "flask-qr-code-web-app"
version = "0.1.0"
description = "A flask web app for generating and decoding qr codes"
authors = ["Owusu Kelvin Clark <kelvinclark2k77@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
qrcode = {extras = ["pil"], version = "^7.3.1"}
Flask-SQLAlchemy = "^2.5.1"
Flask-Alembic = "^2.0.1"
python-dotenv = "^0.19.2"
PyMySQL = "^1.0.2"
WTForms = {extras = ["email"], version = "^3.0.1"}
passlib = "^1.7.4"
pyzbar = "^0.1.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
